--- a/index.html
+++ b/index.html
@@ -66,21 +66,21 @@
         <ul>
           <li>
             <img
-              src="/images/img1.jpg"
+              src="./images/img1.jpg"
               width="370"
               alt="Людина працює за комп'ютером"
             />
           </li>
           <li>
             <img
-              src="/images/img2.jpg"
+              src="./images/img2.jpg"
               width="370"
               alt="Людина працює з телефоном"
             />
           </li>
           <li>
             <img
-              src="/images/img3.jpg"
+              src="./images/img3.jpg"
               width="370"
               alt="Людина працює з планшетом"
             />
@@ -92,7 +92,7 @@
         <ul>
           <li>
             <img
-              src="/images/person1.jpg"
+              src="./images/person1.jpg"
               width="270"
               alt="Фотографія Ігор Дем'яненко"
             />
@@ -101,7 +101,7 @@
           </li>
           <li>
             <img
-              src="/images/person2.jpg"
+              src="./images/person2.jpg"
               width="270"
               alt="Фотографія Ольга Рєпіна"
             />
@@ -110,7 +110,7 @@
           </li>
           <li>
             <img
-              src="/images/person3.jpg"
+              src="./images/person3.jpg"
               width="270"
               alt="Фотографія Микола Тарасов"
             />
@@ -119,7 +119,7 @@
           </li>
           <li>
             <img
-              src="/images/person4.jpg"
+              src="./images/person4.jpg"
               width="270"
               alt="Фотографія Михайло Єрмаков"
             />
